# label-assay

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  ACCESSIBILITY.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: fly-deploy.yml  hf-deploy.yml  uptime.yml
docs/: ACCESSIBILITY.md  DESIGN.md
docs/adr/: 0001-hybrid-extraction.md  0002-deterministic-warning-check.md  0003-rules-as-data.md  0004-swappable-extractor.md
samples/: applications.csv  make_samples.py
src/label_assay/: __init__.py  config.py
src/label_assay/domain/: models.py
src/label_assay/extract/: __init__.py  base.py  fixture.py  haiku.py  images.py  ocr.py
src/label_assay/match/: __init__.py  bold.py  brand.py  warning.py
src/label_assay/rulebook/: __init__.py  loader.py
src/label_assay/rulebook/rules/: health_warning.yaml  label_checks.yaml
src/label_assay/text/: __init__.py  normalize.py  numbers.py
src/label_assay/verify/: __init__.py  confidence.py  engine.py
src/label_assay/web/: __init__.py  app.py  batch.py  budget.py  service.py
src/label_assay/web/static/: app.css  batch.js  submit-guard.js
src/label_assay/web/templates/: base.html  batch_result.html  batch_upload.html  error.html  index.html  result.html
src/ttb_verifier/domain/: __init__.py  models.py
src/ttb_verifier/rulebook/: loader.py
src/ttb_verifier/rulebook/rules/: health_warning.yaml
src/ttb_verifier/web/: app.py
src/ttb_verifier/web/templates/: index.html
tests/: conftest.py  fixture_corpus.py  synthetic_images.py  test_batch.py  test_bold.py  test_brand.py  test_budget.py  test_cola_corpus.py  test_contrast.py  test_engine.py  test_extraction.py  test_images.py  test_logging.py  test_make_labels.py  test_normalize.py  test_numbers.py  test_priority.py  test_rotation.py  test_service.py  test_smoke.py  test_ssot.py  test_supply_chain.py  test_verify_deploy.py  test_warning.py  test_web.py
tests/fixtures/cola/: README.md  applications.csv
tests/fixtures/labels/: applications.csv  manifest.csv
tools/: eval_cola.py  make_test_labels.py  verify_deploy.py
