[project]
name = "ttb-label-verifier"
version = "0.1.0"
description = "Verifies alcohol beverage labels against TTB labeling requirements (27 CFR)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Extraction + vision + CV layers. Declared here as the plan; installed at their
# build stage (extraction Day 3, bold/CV Day 4) to keep the base image lean.
ml = [
    "rapidocr-onnxruntime>=1.4",
    "anthropic>=0.42",
    "opencv-python-headless>=4.10",
    "scikit-image>=0.24",
    "numpy>=2.0",
    "pillow>=11.0",
    "rapidfuzz>=3.10",
    "anyascii>=0.3",
    "cleanco>=2.3",
    "ftfy>=6.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.120",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttb_verifier"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
